# nurikabegen

./: README.md  nurikabe.hs  nurikabegen.cabal  rules.txt
puzzles/: 1.txt  2.txt  3.txt  4.txt  5.txt
puzzles/book2/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  32.txt  33.txt  96.txt
src/: Base.hs  Check.hs  Solve.hs  Touching.hs  solver.hs
