name:                 nurikabegen
version:              0.0.1
author:               Michael Tolly
maintainer:           onyxite@gmail.com
category:             Game
build-type:           Simple
cabal-version:        >= 1.10

executable nurisolve
  main-is:            solver.hs
  other-modules:      Base
                      Solve
                      Touching
                      Check
  other-extensions:   TupleSections
  build-depends:      base >= 4.6 && < 5.0
                      , array >= 0.4 && < 0.6
                      , containers == 0.5.*
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
